Fix bug 241304 (overflow broken on fixed-pos elements).  Patch by roc, r+sr=bzbarsky.